trying to fix scrolling, header update for visibility/confirmation

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ div {
 }
 
 .header {
-	background: slategray;
+	background: blue;
 }
 
 .title-card {
